--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+* { 
+    margin: 0; 
+    padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 .attribution {
-    font-size: 11px;
-    text-align: center;
+    font-size: .7rem;
     padding-top: .5rem;
 }
 
@@ -12,40 +20,45 @@
 
 body {
     font-family: 'Outfit', sans-serif;
-    font-size: 15px;
+    font-size: .9rem;
     background-color: hsl(212, 45%, 89%);
     min-height: 100vh;
     display: flex;
     align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .container {
-    max-width: 350px;
-    margin: 0 auto;
+    max-width: 21rem;
 }
 
 .card { 
     background-color: hsl(0, 0%, 100%);
-    border-radius: 17px;
+    border-radius: 1rem;
     text-align: center;
-    padding: 18px;
+    padding: 1rem;
     margin: 0 1rem;
 }
 
 .image-qr-code {
     width: 100%;
-    border-radius: 12px;
+    border-radius: 1rem;
 }
 
 .text {
-    padding: 22px 10px;
+    padding: 1rem .5rem;
 }
 
 .text h2 {
     color: hsl(218, 44%, 22%);
-    padding-bottom: 15px;
+    padding-bottom: 1rem;
 }
 
 .text p {
     color: hsl(220, 15%, 55%);
+}
+
+@media (max-width: 375px) { 
+    
 }
