--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 
 .card { 
     background-color: hsl(0, 0%, 100%);
-    border-radius: 1rem;
+    border-radius: 1.4rem;
     text-align: center;
     padding: 1rem;
     margin: 0 1rem;
@@ -43,11 +43,11 @@ body {
 
 .image-qr-code {
     width: 100%;
-    border-radius: 1rem;
+    border-radius: .6rem;
 }
 
 .text {
-    padding: 1rem .5rem;
+    padding: 1.5rem .6rem;
 }
 
 .text h2 {
